Authenticate page created

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,11 +37,12 @@
     ],
     "rules": {
       "@typescript-eslint/no-explicit-any": "off",
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
+      "react/function-component-definition": "off",
       "react/jsx-props-no-spreading": "off",
       "import/prefer-default-export": "off",
       "react/require-default-props": "off",
+      "react-hooks/exhaustive-deps": "warn",
+      "react-hooks/rules-of-hooks": "error",
       "react/react-in-jsx-scope": "off",
       "no-use-before-define": "off",
       "import/no-duplicates": "off",
