--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "realchat",
   "version": "0.0.1",
   "private": false,
+  "license": "MIT",
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
@@ -11,6 +12,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3"
@@ -23,6 +25,7 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.19",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
